@@ -3,6 +3,7 @@ admin_ids = 495999626143465472
 ban_list = files/ban.txt
 max_file_size = 9
 autoupdate = n
+camera_message_gifs_enabled = True
 
 [media]
 wrong_mp3 = files/wrong.mp3
